kubernetes/apps/network/external/app/caspian.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: caspian
  namespace: network
  annotations:
    external-dns.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["caspian.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: caspian
