kubernetes/apps/network/external/app/minecraft.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["atlas.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: atlas
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wing-node01
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["wing-node01.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: wing-node01
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wing-node02
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["wing-node02.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: wing-node02
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wing-node03
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["wing-node03.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: wing-node03
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wing-proxy
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["wing-proxy.ewatkins.dev"]
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: wing-proxy
